# fotop-extractor

./: .gitignore  README.md  pyproject.toml  run.sh
src/: run.py
src/fotop_extractor/: __init__.py  file_writer.py
